# rainbow-register-backend

./: .env.example  .gitignore  CHECKLIST.md  START_GUIDE.md  TODO.md  pyproject.toml  requirements.txt  run.bat  run.ps1  run.py  test_api.py
app/: main.py
app/api/v1/: api.py
app/api/v1/endpoints/: admin.py  invitation.py  profile.py  upload.py
app/core/: city_coordinates.py  config.py  deps.py  security.py
app/crud/: crud_admin.py  crud_invitation.py  crud_profile.py  crud_settings.py
app/db/: base.py
app/models/: __init__.py  admin_user.py  invitation_code.py  system_setting.py  user_profile.py
app/schemas/: __init__.py  admin.py  common.py  invitation.py  profile.py
app/services/: ai_post_generator.py  ai_review.py  ai_review_trigger.py  invitation.py  post_generator.py  wechat.py
app/utils/: helpers.py
scripts/: add_birthday_field.py  add_post_url_field.py  add_system_settings.py  create_admin.py  create_bypass_code.py  generate_invitations.py  init_db.py  migrate_add_new_fields.py  seed_more_users.py  seed_network_data.py
