[project]
name = "rainbow-register-backend"
version = "1.0.0"
description = "LGBT+ 交友平台后端服务 - 彩虹注册系统"
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

[project.urls]
Homepage = "https://github.com/your-username/rainbow-register-backend"
Repository = "https://github.com/your-username/rainbow-register-backend"
Documentation = "https://github.com/your-username/rainbow-register-backend/blob/main/docs"

[tool.black]
line-length = 120
target-version = ['py39', 'py310', 'py311']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 120
multi_line_output = 3

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"